...
            return Text(context.S.appTitle);
          },
        ),
        automaticallyImplyLeading: false,
        actions: [
          IconButton(
            key: const ValueKey('logout_button'),
            icon: const Icon(Icons.logout),
            onPressed: () {
              context.read<AuthBloc>().add(LoggedOut());
            },
          ),
        ],
...
